<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_car_fail_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="demo.zhangxu.zhangxudemo.activity.CarFailInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_fail_info" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fail_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_fail_tips" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fail_tips"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_fail_notice" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:text="@string/back"
            android:drawableLeft="@mipmap/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBaseline="@+id/btn_help"
            android:id="@+id/btn_back" />


        <Button
            android:text="@string/info_btn_plug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="101dp"
            android:layout_marginEnd="101dp"
            android:layout_alignBaseline="@+id/btn_help"
            android:id="@+id/btn_plug" />


        <Button
            android:text="@string/info_btn_component"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_component"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_plug"
            android:layout_toStartOf="@+id/btn_plug"
            android:layout_alignBaseline="@+id/btn_help"/>

        <Button
            android:text="@string/info_btn_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_line"
            android:layout_alignBaseline="@+id/btn_help"
            android:layout_toLeftOf="@+id/btn_component"
            android:layout_toStartOf="@+id/btn_component" />

        <Button
            android:text="@string/info_btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_help" />

    </RelativeLayout>
</RelativeLayout>
